--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "jest",
-    "test:w": "jest --watch",
+    "test": "echo Use the \"test:jest\" or \"test:mocha\" scripts && exit 1",
+    "test:jest": "jest",
+    "test:jest:w": "jest --watch",
+    "test:mocha": "webpack src/index.mocha-test.ts && mocha dist/main.bundle.js",
     "prettier": "prettier --single-quote --semi=false --write ."
   },
   "keywords": [],
@@ -21,8 +23,11 @@
     "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
-    "jsdom-worker": "^0.1.0",
+    "jsdom": "^16.2.2",
+    "jsdom-worker": "^0.2.1",
+    "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
+    "sinon": "^9.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
