--- a/package.json
+++ b/package.json
@@ -1,24 +1,49 @@
 {
   "name": "minimal-workerize-setup",
   "version": "1.0.0",
-  "description": "",
+  "description": "A minimal web app that uses Web Workers by leveraging workerize and webpack",
+  "keywords": [
+    "web worker",
+    "web workers",
+    "web",
+    "worker",
+    "workerize",
+    "threads"
+  ],
+  "author": {
+    "name": "Ronald Rey",
+    "email": "reyronald@gmail.com",
+    "url": "https://github.com/reyronald"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reyronald/minimal-workerize-setup.git"
+  },
+  "license": "ISC",
   "scripts": {
     "start": "webpack-dev-server --open",
+    "build": "webpack",
     "test": "echo Use the \"test:jest\" or \"test:mocha\" scripts && exit 1",
     "test:jest": "jest",
     "test:jest:w": "jest --watch",
-    "test:mocha": "webpack src/index.mocha-test.ts && mocha dist/main.bundle.js",
-    "prettier": "prettier --single-quote --semi=false --write ."
+    "test:mocha": "webpack src/app.mocha-test.ts && mocha dist/main.bundle.js",
+    "prettier": "prettier --single-quote --semi=false --write .",
+    "postinstall": "patch-package"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-typescript": "^7.10.1",
+    "@testing-library/dom": "^7.4.0",
+    "@types/chai": "^4.2.11",
+    "@types/chai-subset": "^1.3.3",
     "@types/jest": "^26.0.0",
+    "@types/mocha": "^7.0.2",
+    "@types/sinon": "^9.0.4",
+    "@types/sinon-chai": "^3.2.4",
+    "@types/testing-library__dom": "^7.0.2",
     "babel-jest": "^26.0.1",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
@@ -27,16 +52,17 @@
     "jsdom-worker": "^0.2.1",
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
+    "patch-package": "^6.2.2",
     "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
+    "workerize": "^0.1.8",
     "workerize-loader": "^1.2.1"
   },
-  "dependencies": {
-    "workerize": "^0.1.8"
-  }
+  "dependencies": {}
 }
